# Pythia-CTI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pythia.db-shm  pythia.db-wal
.github/workflows/: docs.yml
data/seed/: SOURCES.md  intel_feeds.json  owasp_llm_top10.json
data/sigma/: net_connection_susp_beaconing.yml  proc_creation_certutil_download.yml  proc_creation_defender_tamper.yml  proc_creation_lateral_psexec.yml  proc_creation_lsass_dump.yml  proc_creation_office_macro_spawn.yml  proc_creation_powershell_suspicious_args.yml  proc_creation_regsvr32_squiblydoo.yml  proc_creation_rundll32_suspicious.yml  proc_creation_schtasks_creation.yml  proc_creation_shadow_copy_deletion.yml  proc_creation_system_info_discovery.yml  proc_creation_wmi_execution.yml  web_susp_webshell_indicators.yml  win_security_brute_force.yml  win_security_pass_the_hash.yml
docker/: entrypoint.sh
docs/: api.md  demo.md  external-intel.md  frameworks.md  getting-started.md  hunt-workbench.md  index.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: actors.ts  ai-threats.ts  analytics.ts  client.ts  hunts.ts  intel-feed.ts  iocs.ts  malware.ts  parse.ts  rules.ts  sync.ts  threats.ts  ttps.ts  watchlist.ts
frontend/src/components/layout/: Breadcrumb.tsx  Shell.tsx  TopNav.tsx
frontend/src/components/settings/: ApiKeyModal.tsx
frontend/src/hooks/: useApiKey.ts  useCopyToClipboard.ts  useDebounce.ts
frontend/src/pages/: ActorDetail.tsx  Actors.tsx  AiThreats.tsx  Analytics.tsx  Dashboard.tsx  Docs.tsx  HuntList 2.tsx  HuntList.tsx  HuntWorkbench 2.tsx  HuntWorkbench.tsx  IntelFeed.tsx  IocDetail.tsx  Iocs.tsx  Malware.tsx  MalwareDetail.tsx  RecentArticles.tsx  RuleDetail.tsx  Rules.tsx  ThreatDetail.tsx  TtpDetail.tsx  Ttps.tsx  Watchlist.tsx
frontend/src/types/: api.ts
scripts/: build_seed.py  import_apt_sheet.py  load_synthetic_data.py  seed_demo_hunt.py
src/pythia/: __init__.py
src/pythia/api/: actors.py  ai_threats.py  analytics.py  feed.py  hunts 2.py  hunts.py  intel_feed.py  iocs.py  main.py  malware.py  parse.py  reports.py  rules.py  sync.py  threats.py  ttps.py  watchlist.py
src/pythia/cli/: main.py
src/pythia/core/: alerting.py  config.py  db.py  scheduling.py  security.py  seed.py
src/pythia/detections/: converters.py  sigma_loader.py  yara_loader.py
src/pythia/exporters/: hunt.py  stix.py  taxii.py
src/pythia/ingestion/: claude_parser.py  enrichment.py  feed_poller.py  normalizer.py
src/pythia/models/: __init__.py  actor.py  atlas.py  attck.py  enums.py  hunt.py  intel_feed.py  intrusion.py  ioc.py  malware.py  owasp_llm.py  report.py  rule.py  sync_log.py  watchlist.py
src/pythia/reporting/: business_impact.py  pdf.py
tests/: conftest.py  test_api.py  test_cli.py  test_health.py  test_hunts.py
(+26 files in other folders)
