[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythia"
version = "0.1.0"
description = "Oracle-grade threat intelligence, served as an API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ty Renker", email = "tyrenker6@gmail.com" },
]
keywords = ["threat-intelligence", "cti", "security", "mitre", "attck", "atlas"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ingestion = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "trafilatura>=1.10",
    "selectolax>=0.3",
]
detections = [
    "pysigma>=0.11",
    "pysigma-backend-splunk>=1.1",
    "pysigma-backend-elasticsearch>=1.1",
    "yara-python>=4.5",
]
reporting = [
    "jinja2>=3.1",
    "weasyprint>=62.0",
]
scheduling = [
    "apscheduler>=3.10",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "pythia[ingestion,detections,reporting,scheduling]",
]

[project.scripts]
pythia = "pythia.cli.main:app"

[project.urls]
Homepage = "https://github.com/tyrenker/pythia"
Documentation = "https://github.com/tyrenker/pythia#readme"
Issues = "https://github.com/tyrenker/pythia/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pythia*"]

[tool.setuptools.package-data]
pythia = ["ingestion/prompts/*.md", "reporting/templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["E501", "B008"]  # E501: line length; B008: FastAPI Depends() idiom

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["trafilatura.*", "selectolax.*", "weasyprint.*", "yara.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
